# InterSectionSectors

./: .gitignore  CMakeLists.txt  NEWTESTS.md  README.md  STACK.md  TESTS.md
res/: InterSectionSectors  README.md
src/optimized/: CMakeLists.txt  InterSectionSectors.cpp  ReadFile.cpp  ReadFile.h  Sector.cpp  Sector.h  main.cpp  rand_sse.cpp  rand_sse.h
src/optimizedwithoutout/: CMakeLists.txt  InterSectionSectors.cpp  ReadFile.h  Sector.cpp  Sector.h  rand_sse.h
src/original/: CMakeLists.txt
src/originaltimetest/: CMakeLists.txt  main.cpp
